# CxKitty

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  config.yml  data.txt  dialog.py  logger.py  main.py  pyproject.toml  searcher.py  session.py  utils.py
.github/workflows/: docker-image.yml  package-exe.yml
cxapi/: __init__.py  api.py  base.py  chapters.py  classes.py  exam.py  exception.py  exceptions.py  face_detection.py  schema.py  session.py  utils.py
cxapi/captcha/: image.py
cxapi/jobs/: document.py  exam.py  video.py  work.py
cxapi/task_card/: exam.py  video.py
cxapi/task_point/: __init__.py  document.py  video.py  work.py
resolver/: __init__.py  document.py  media.py  question.py
resolver/searcher/: __init__.py  json.py  openai.py  restapi.py  sqlite.py
