[tool.poetry]
name = "CxKitty"
version = "0.2.7"
description = "超星学习通答题姬"
license = "GPL-3.0"
authors = ["SocialSisterYi <1440239038@qq.com>"]
readme = "README.md"
repository = "https://github.com/SocialSisterYi/CxKitty"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
qrcode = "^7.3.1"
rich = "^12.6.0"
pycryptodome = "^3.15.0"
lxml = "^4.9.1"
pyyaml = "^6.0"
jsonpath-python = "^1.0.6"
wcwidth = "^0.2.5"
beautifulsoup4 = "^4.11.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
